--- a/SmartHome/SHDetailviewLivingroomHeatingVC.xib
+++ b/SmartHome/SHDetailviewLivingroomHeatingVC.xib
@@ -132,6 +132,7 @@
 						<string key="NSFrame">{{324, 130}, {377, 216}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<bool key="IBUIShowsSelectionIndicator">YES</bool>
